--- a/package.json
+++ b/package.json
@@ -18,6 +18,9 @@
     "react-router-dom": "^6.25.1"
   },
   "devDependencies": {
+    "@babel/types": "^7.24.9",
+    "@types/babel__core": "^7.20.5",
+    "@types/babel-generator": "^6.25.8",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@typescript-eslint/eslint-plugin": "^7.15.0",
