--- a/package.json
+++ b/package.json
@@ -15,7 +15,9 @@
     "json-server": "^1.0.0-beta.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^6.25.1"
+    "react-icons": "^5.2.1",
+    "react-router-dom": "^6.25.1",
+    "swiper": "^11.1.8"
   },
   "devDependencies": {
     "@babel/types": "^7.24.9",
